fixed table overflow

--- a/src/app/components/ranking/table/table.component.scss
+++ b/src/app/components/ranking/table/table.component.scss
@@ -2,6 +2,7 @@
 
 .table-container{
     width: 100%;
+    height: 97%;
     display: flex;
     justify-content: center;
     overflow-y: scroll;
